# Movie-Database-Website

./: .gitignore  CMakeLists.txt  movies.db
.github/workflows/: main.yml
inc/: action.hpp  adventure.hpp  animation.hpp  comedy.hpp  crime.hpp  drama.hpp  genre_search.hpp  helper.hpp  horror.hpp  movie.hpp  movie_base.hpp  movie_decorator.hpp  myLib.hpp  query.hpp  romance.hpp  search.hpp  title_search.hpp
src/: action.cpp  adventure.cpp  animation.cpp  comedy.cpp  crime.cpp  drama.cpp  genre_search.cpp  helper.cpp  horror.cpp  movie_base.cpp  movie_decorator.cpp  query.cpp  romance.cpp  title_search.cpp
tests/: genre_test.hpp  strategy_test.hpp  test.cpp
